# byo-git

./: CMakeLists.txt  README.md  vcpkg.json  your_program.sh
src/: Server.cpp
src/commands/: cat_file.cpp  cat_file.hpp  catfile.cpp  catfile.hpp  commands.cpp  commands.hpp  hash_object.cpp  hash_object.hpp  init.cpp  init.hpp  ls_tree.cpp  ls_tree.hpp  validate.cpp  validate.hpp
src/object/: blob.cpp  compress.cpp  object.cpp  object.hpp  sha.cpp  tree.cpp
stages/: 1-7.md
